# claw-a-thon-landdoraemon

./: .dockerignore  .gitignore  Dockerfile  README.md  index.html
.agentbase/: last_response.json  vcr_robot_create_response.json
backend/: main.py  mock_data.py  parser.py  prompts.py  requirements.txt
backend/graph/: auth.py  exceptions.py
backend/routers/: v1_compose.py  v1_emails.py  v1_graph.py  v1_workshops.py
backend/services/: graph_service.py
backend/tests/: test_graph_service.py  test_parser.py  test_prompts.py  test_v1_emails.py  test_v1_graph.py  test_v1_workshops.py
docs/superpowers/plans/: 2026-06-15-graph-integration.md
docs/superpowers/specs/: 2026-06-15-graph-integration-design.md
frontend/: .gitignore  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: ChatPanel.tsx  EmailPreview.tsx  InputForm.tsx  ParticipantUpload.tsx
frontend/src/components/auth/: LoginPage.tsx
frontend/src/components/certificates/: CertificatesPage.tsx
frontend/src/components/compose/: ComposePage.tsx  EmailTypeSelector.tsx  ImageUpload.tsx  WorkshopSelector.tsx
frontend/src/contexts/: AuthContext.tsx  EmailContext.tsx
graph-integration/: .env.example  .gitignore  main.py  pyproject.toml  test_live.py
graph-integration/graph/: __init__.py  auth.py  client.py
graph-integration/tests/: test_auth.py  test_client.py  test_exceptions.py
poc/: _shared.js  certificates.html  emails.html  feedback.html  index.html  rsvp.html  workshop.html
(+16 files in other folders)
